# alloy

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg.json
include/detail/: is_callable.hpp
test/: CMakeLists.txt  OptionTests.cpp
